implemented soft and hard deletes
